tests/optional_chaining/super_call.js
class A {}
class B extends A {
  constructor () {
    super()?.a as empty; // error
  }
}
